# fastapi-saas

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
tests/: conftest.py  test_health.py
