[project]
name = "fastapi-saas"
version = "0.1.0"
description = "Plantilla con FastAPI, configurada para desarrollo con testing."
authors = [{ name = "Manuel Troncoso", email = "manuel_troncoso.31@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi (>=0.115,<0.116)",
  "uvicorn[standard] (>=0.30,<0.31)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest (>=8.3,<9.0)",
  "httpx (>=0.27,<0.28)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
packages = [{ include = "app", from = "src" }]
